feat: 자기소개 추가

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,11 @@
     <title>Mango</title>
 </head>
 <body>
-    
+    <div>
+        <h2>자기 소개</h2>
+        <p>이름 : 망고</p>
+        <p>사는 곳 : 대구</p>
+        <p>안녕하세요! 우아한테크코스 BE 5기 망고입니다.</p>
+    </div>
 </body>
 </html>
