feat: 인생영화 추가

--- a/html/index.html
+++ b/html/index.html
@@ -13,5 +13,89 @@
         <p>사는 곳 : 대구</p>
         <p>안녕하세요! 우아한테크코스 BE 5기 망고입니다.</p>
     </div>
+    <div>
+        <h2>인생 영화 BEST 5</h2>
+        <table>
+            <th>순위</th>
+            <th>제목</th>
+            <th>포스터</th>
+            <th>줄거리</th>
+            <th>바로가기</th>
+            <tr>
+                <td>1</td>
+                <td>더 퍼스트 슬램덩크</td>
+                <td>
+                    <img src="../images/slamdunk.jpeg" alt="더 퍼스트 슬램덩크" />
+                </td>
+                <td>
+                    전국 제패를 꿈꾸는 북산고 농구부 5인방의 꿈과 열정, 멈추지 않는 도전을 그린 영화
+                </td>
+                <td>
+                    <a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=223800">네이버 영화 바로가기</a>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>탑건: 매버릭</td>
+                <td>
+                    <img src="../images/top_gun.jpeg" alt="탑건: 매버릭" />
+                </td>
+                <td>
+                    한순간의 실수도 용납되지 않는 하늘 위, <br/>
+                    가장 압도적인 비행이 시작된다!
+                </td>
+                <td>
+                    <a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=81888#">네이버 영화 바로가기</a>
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>어벤져스: 엔드게임</td>
+                <td>
+                    <img src="../images/endgame.jpeg" alt="어벤져스: 앤드게임" />
+                </td>
+                <td>
+                    인피니티 워 이후 절반만 살아남은 지구<br/>
+                    마지막 희망이 된 어벤져스<br/>
+                    먼저 떠난 그들을 위해 모든 것을 걸었다!<br/>
+                </td>
+                <td>
+                    <a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=136900">네이버 영화 바로가기</a>
+                </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>스파이더맨: 노 웨이 홈</td>
+                <td>
+                    <img src="../images/spiderman.jpeg" alt="스파이더맨: 노 웨이 홈" />
+                </td>
+                <td>
+                    ‘미스테리오’의 계략으로 세상에 정체가 탄로난 <br/>
+                    스파이더맨 ‘피터 파커’는 하루 아침에 평범한 일상을 잃게 된다. <br/>
+                    문제를 해결하기 위해 ‘닥터 스트레인지’를 찾아가 도움을 청하지만 <br/>
+                    뜻하지 않게 멀티버스가 열리면서 각기 다른 차원의 불청객들이 나타난다. <br/>
+                    ‘닥터 옥토퍼스’를 비롯해 스파이더맨에게 깊은 원한을 가진 숙적들의 강력한 공격에 <br/>
+                    ‘피터 파커’는 사상 최악의 위기를 맞게 되는데…
+                </td>
+                <td>
+                    <a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=208077">네이버 영화 바로가기</a>
+                </td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>트루먼 쇼</td>
+                <td>
+                <img src="../images/truman.jpeg" alt="트루먼 쇼" />
+                </td>
+                <td>
+                    가족, 친구, 회사… 하나부터 열까지 모든 것이 가짜인 ‘트루먼 쇼’ <br/>
+                    과연 트루먼은 진짜 인생을 찾을 수 있을까?
+                </td>
+                <td>
+                    <a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=19099">네이버 영화 바로가기</a>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
