feat: 방명록 추가

--- a/html/index.html
+++ b/html/index.html
@@ -97,5 +97,22 @@
             </tr>
         </table>
     </div>
+    <div>
+        <h2>방명록</h2>
+        <form>
+            <div>
+                이름:   
+                <input type="text"/>
+            </div>
+            <div>
+                <p>본인 취향 영화</p>
+                <label><input type="checkbox" value="더 퍼스트 슬램덩크">더 퍼스트 슬램덩크</label>
+                <label><input type="checkbox" value="탑건: 매버릭">탑건: 매버릭</label>
+                <label><input type="checkbox" value="어벤져스: 엔드게임">어벤져스: 엔드게임</label>
+                <label><input type="checkbox" value="스파이더맨: 노 웨이 홈">스파이더맨: 노 웨이 홈</label>
+                <label><input type="checkbox" value="트루먼 쇼">트루먼 쇼</label>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
