--- a/html/index.html
+++ b/html/index.html
@@ -112,6 +112,10 @@
                 <label><input type="checkbox" value="스파이더맨: 노 웨이 홈">스파이더맨: 노 웨이 홈</label>
                 <label><input type="checkbox" value="트루먼 쇼">트루먼 쇼</label>
             </div>
+            <div>
+                <button type="button">등록</button>
+                <button type="reset">취소</button>
+            </div>
         </form>
     </div>
 </body>
